--- a/tutorials/Tutorial5 - visualize recovery results.ipynb
+++ b/tutorials/Tutorial5 - visualize recovery results.ipynb
@@ -16,10 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "dbf1765c-890a-4c7a-a16d-c8a64b217f43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-ay_1jd3n because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
+      "2022-12-29 11:13:13.039235: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to eht-imaging! v 1.2.2 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -32,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c2118c19-fccf-405c-897b-90e72a89a62f",
    "metadata": {},
    "outputs": [],
@@ -51,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3ba3aa91-7af3-4f60-ae18-3fc0a5d1d7ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5526a0b7ddf54b89a328bac917a57cff",
+       "model_id": "b9e8a0cae808439db8412ac7f0bca9bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "98141971-a8ee-4822-b20d-bacb62d5a109",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31be57f0db314cc9a12bd07b37595ca7",
+       "model_id": "c94136d930c84848a4ce36a9f94a19b0",
        "version_major": 2,
        "version_minor": 0
       },
