--- a/notebooks/Synthetic lightcurves 2 - Recovery accretion disk noise.ipynb
+++ b/notebooks/Synthetic lightcurves 2 - Recovery accretion disk noise.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-4ou1gf4l because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-oi3yt11c because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-13 16:19:04.380536: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2023-03-17 13:03:59.233599: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "91335518-63d5-4212-bfec-2ab73a60ad01",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4  9.380990  0.240443  0.110972  0.072903"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "f6466bd6-6272-432e-be7e-9b5454ea46ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(data_path.parent.joinpath('sim1_params.yml'), 'r') as stream:\n",
+    "with open(data_path.parent.joinpath('sim1_params.yaml'), 'r') as stream:\n",
     "    simulation_params = yaml.load(stream, Loader=yaml.Loader)\n",
     "locals().update(simulation_params['model'])\n",
     "\n",
@@ -183,10 +183,10 @@
     "    'recovery_scale': 1.0,                          # feature scale for recovery [M] \n",
     "    \n",
     "    # Background accretion\n",
-    "    'seed': 12,                                     # random seed of precomputed grf\n",
+    "    'grf_seed': 12,                                 # random seed of precomputed grf\n",
     "    'alpha': 2.0,                                   # envelope  * exp(alpha * grf)\n",
-    "    'disk_width': 0.275,                            # Gaussian std in Z \n",
-    "    'H_r': 0.075,                                   # H/r (angle in the Z direction)\n",
+    "    'diameter_M': 15,                               # Gaussian envelope diameter (M)\n",
+    "    'H_r': 0.075,                                   # H/r (opening angle in the Z direction)\n",
     "    'I_mean_disk': 2.2,                             # Jy\n",
     "    'Q_frac_disk': 0.25,                            # Fraction of linear polarization\n",
     "    \n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "id": "886b7356-8a0d-4147-9130-4577d5d79b13",
    "metadata": {},
    "outputs": [],
@@ -212,6 +212,7 @@
     "flare_path = Path(simulation_params['flare_path'])\n",
     "emission_flare = xr.load_dataarray(flare_path)\n",
     "lightcurves_flare = np.array(lightcurves_df[stokes])\n",
+    "t_frames = np.array(lightcurves_df['t'])\n",
     "\n",
     "# Compute geodesics\n",
     "geos = bhnerf.kgeo.image_plane_geos(\n",
@@ -221,7 +222,7 @@
     "    beta_range=[-fov_M/2, fov_M/2])\n",
     "t_injection = -float(geos.r_o + fov_M/4)\n",
     "\n",
-    "# Keplerian velocity field\n",
+    "# Keplerian velocity and Doppler boosting\n",
     "rot_sign = {'cw': -1, 'ccw': 1}\n",
     "Omega = rot_sign[Omega_dir] * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "umu = bhnerf.kgeo.azimuthal_velocity_vector(geos, Omega)\n",
@@ -243,18 +244,202 @@
     "predictor = bhnerf.network.NeRF_Predictor(rmax, rmin, rmax, z_width, posenc_var=recovery_scale/fov_M)\n",
     "\n",
     "\"\"\" Background accretion modeled as Gaussian Random Field (GRF) \"\"\"\n",
-    "t_frames = np.array(lightcurves_df['t'])\n",
-    "grf_path = '../data/synthetic_lightcurves/accretion_grfs/grf.seed{}.nc'.format(seed)\n",
+    "grf_path = '../data/synthetic_lightcurves/accretion_grfs/grf.seed{}.nc'.format(grf_seed)\n",
     "grf = xr.load_dataarray(grf_path)\n",
     "grf = grf.interp(t=float(grf.t[-1]) * (t_frames - t_frames.min()) / (t_frames.max() - t_frames.min()))\n",
-    "image_plane_disk = bhnerf.emission.grf_to_image_plane(grf, geos, Omega, J_disk, alpha, disk_width, H_r)\n",
+    "image_plane_disk = bhnerf.emission.grf_to_image_plane(grf, geos, Omega, J_disk, diameter_M, alpha, H_r)\n",
     "lightcurves_disk = image_plane_disk.sum(axis=(-1,-2))\n",
     "lightcurves_disk *=  I_mean_disk/lightcurves_disk.mean(axis=0)[0]\n",
-    "lightcurves_disk_qu = lightcurves_disk[:,1:]\n",
+    "lightcurves_disk_qu = lightcurves_disk[:,J_inds]\n",
     "disk_LP = np.sqrt(np.sum(lightcurves_disk_qu**2, axis=1)).mean()\n",
     "\n",
     "# Update noisy target and sigmas for recovery\n",
     "target = lightcurves_flare + lightcurves_disk_qu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8b0aa261-8267-4c28-a48b-f4fae5a0373e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "291375ba89f14c4fb2a9035b96e4b9eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.animation.FuncAnimation at 0x7f91342bc400>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%matplotlib widget\n",
+    "grf.visualization.animate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "28909d77-d68e-4a30-ad27-dfede42aef9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8c0a8209582414490fbaad0efccfe27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.animation.FuncAnimation at 0x7f8fb40739d0>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_plane_xr = xr.DataArray(image_plane, {'t': t_frames, 'stokes': ['I', 'Q', 'U'], 'beta': geos.beta, 'alpha': geos.alpha}, ['t', 'stokes', 'beta', 'alpha'], 'Image Plane')\n",
+    "%matplotlib widget\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(10, 3))\n",
+    "bhnerf.visualization.animate_movies_synced(image_plane_xr.transpose('stokes',...), axes, vmax=[0.01,None, None])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5cc5dbfd-4cc7-4d36-b5c9-68c8bf413fa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9e3a1e56566940b0bc7ae7ce58340d0f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='t', max=97), Output()), _dom_classes=('widget-interact',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib widget\n",
+    "bhnerf.visualization.ipyvolume_3d(emission, fov_M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7ecf79a6-6c96-4ddf-8d08-8a94ed3bb48f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q_frac_disk = 0.25\n",
+    "H_r=0.05\n",
+    "J_disk = np.nan_to_num(bhnerf.kgeo.parallel_transport(geos, umu, g, b, Q_frac=Q_frac_disk, V_frac=0), 0.0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "5447d427-96b7-470a-8880-1d885c41b9b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disk_width = 0.15\n",
+    "H_r = 0.075\n",
+    "image_plane_disk = bhnerf.emission.grf_to_image_plane(grf, geos, Omega, J_disk, alpha, disk_width, H_r)\n",
+    "lightcurves_disk = image_plane_disk.sum(axis=(-1,-2))\n",
+    "lightcurves_disk *=  I_mean_disk/lightcurves_disk.mean(axis=0)[0]\n",
+    "lightcurves_disk_qu = lightcurves_disk[:,J_inds]\n",
+    "disk_LP = np.sqrt(np.sum(lightcurves_disk_qu**2, axis=1)).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "cc1834f0-1c0a-4a28-98d2-cde7748064a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diameter_M = 15.0\n",
+    "H_r = 0.05\n",
+    "grf = xr.load_dataarray(grf_path)\n",
+    "grf = grf.interp(t=float(grf.t[-1]) * (t_frames - t_frames.min()) / (t_frames.max() - t_frames.min()))\n",
+    "gaussian = bhnerf.utils.gaussian_xr([grf.y.size, grf.x.size], [0,0], std=diameter_M/2.355, fov=(fov_M, 'M')).data\n",
+    "movie = np.exp(alpha*grf) * gaussian\n",
+    "# Expand the 2D grf into 3D\n",
+    "emission = bhnerf.utils.expand_3d(movie, fov_z=fov_M, H_r=H_r)\n",
+    "emission.coords.update(bhnerf.utils.linspace_xr(emission.shape[1:], -fov_M/2, fov_M/2))\n",
+    "image_plane_disk = bhnerf.emission.image_plane_dynamics(emission, geos, Omega, 0.0, 0.0, J_disk, slow_light=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "7c716d2e-0501-4d35-a2be-61c5b09f0adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ef04df379ca48c69779060ca7cda834",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.animation.FuncAnimation at 0x7f5a703d7820>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_plane_xr = xr.DataArray(image_plane_disk, {'t': t_frames, 'stokes': ['I', 'Q', 'U'], 'beta': geos.beta, 'alpha': geos.alpha}, ['t', 'stokes', 'beta', 'alpha'], 'Image Plane')\n",
+    "%matplotlib widget\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(10, 3))\n",
+    "bhnerf.visualization.animate_movies_synced(image_plane_xr.transpose('stokes',...), axes, vmax=[0.025, None, None])"
    ]
   },
   {
@@ -281,7 +466,8 @@
    "source": [
     "%matplotlib inline\n",
     "log_period = 500\n",
-    "recovery_dir = data_path.parent.joinpath('recovery/{}.seed_{}.disk_LP_{:1.2}.grf_seed_{}.{}'.format(sim_name, hparams['seed'], disk_LP, seed, ''.join(stokes)))\n",
+    "recovery_dir = data_path.parent.joinpath('recovery/{}.seed_{}.disk_LP_{:1.2}.grf_seed_{}.{}'.format(\n",
+    "    sim_name, hparams['seed'], disk_LP, grf_seed, ''.join(stokes)))\n",
     "train_step = bhnerf.optimization.TrainStep.image(t_frames, target, sigma, dtype='lc')\n",
     "\n",
     "writer = bhnerf.optimization.SummaryWriter(logdir=recovery_dir)\n",
@@ -298,7 +484,7 @@
     "writer.close()\n",
     "\n",
     "params = {'simulation': simulation_params, 'recovery': recovery_params}\n",
-    "with open('{}/params.yml'.format(recovery_dir), 'w') as file:\n",
+    "with open('{}/params.yaml'.format(recovery_dir), 'w') as file:\n",
     "    yaml.dump(params, file, default_flow_style=False)"
    ]
   }
